--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -5,7 +5,7 @@ recursive-exclude __pycache__  *.py[cod] *.orig
 
 # Include the README and CHANGELOG
 include *.md
-recursive-include pl_sandbox *.md
+recursive-include lightning_transformers *.md
 
 # Include the license file
 include LICENSE
