--- a/conf/config.yaml
+++ b/conf/config.yaml
@@ -2,7 +2,9 @@ defaults: # for loading the default config
   
   - model: bert-base-uncased
   - dataset: squad
-  - trainer: default
+  - training: default
+  - trainer: debug
+  - scheduler: linear_schedule_with_warmup
   - optimizer: adamw
 
 task: ???
