--- a/conf/model/text_classification/huggingface.yaml
+++ b/conf/model/text_classification/huggingface.yaml
@@ -1,4 +1,4 @@
 # @package model
 _target_: lightning_transformers.task.text_classification.LitTextClassificationTransformer
 model_type: transformers.AutoModelForSequenceClassification
-pretrained_model_name_or_path: &pretrained_model_name_or_path bert-base-cased
+pretrained_model_name_or_path: bert-base-cased
