Add requirements, swap API to expose model as a separate config to the downstream task type. Swap prepare_data to process_data as process_data run on rank 0

--- a/conf/config.yaml
+++ b/conf/config.yaml
@@ -1,9 +1,10 @@
 defaults: # for loading the default config
   - training: default
-  - trainer: debug
+  - trainer: default
   - scheduler: linear_schedule_with_warmup
   - optimizer: adamw
   - tokenizer: huggingface
+  - model: huggingface
 
 model: ???
 dataset: ???
