--- a/conf/config.yaml
+++ b/conf/config.yaml
@@ -5,6 +5,10 @@ defaults: # for loading the default config
   - optimizer: adamw
   - tokenizer: huggingface
   - model: huggingface
+  - logger: tchaton
 
 model: ???
 dataset: ???
+experiment_name: ${now:%Y-%m-%d}_${now:%H-%M-%S}
+log: False
+ignore_warnings: True
