--- a/conf/trainer/ddp_shared_2_gpus.yaml
+++ b/conf/trainer/ddp_shared_2_gpus.yaml
@@ -8,7 +8,7 @@ gradient_clip_val: 0.0
 process_position: 0
 num_nodes: 1
 num_processes: 1
-gpus: null
+gpus: 2
 auto_select_gpus: False
 tpu_cores: null
 log_gpu_memory: null
@@ -38,14 +38,14 @@ truncated_bptt_steps: null
 resume_from_checkpoint: null
 profiler: null
 benchmark: False
-deterministic: False
+deterministic: True
 reload_dataloaders_every_epoch: False
 auto_lr_find: False
 replace_sampler_ddp: True
-terminate_on_nan: False
+terminate_on_nan: True
 auto_scale_batch_size: False
 prepare_data_per_node: True
-plugins: null
+plugins: "ddp_sharded"
 amp_backend: 'native'
 amp_level: 'O2'
 distributed_backend: null
