Clean up folder structure by introducing backbone to differentiate downstream model/pre-trained model. introduced tokenizer package for custom tokenizer modules, added my initial code for writing_prompts text generation dataset and performer example

--- a/conf/config.yaml
+++ b/conf/config.yaml
@@ -4,8 +4,8 @@ defaults: # for loading the default config
   - scheduler: linear_schedule_with_warmup
   - optimizer: adamw
   - tokenizer: huggingface
-  - model: huggingface
-  - logger: tchaton
+  - backbone: bert-base-cased
+  - logger: tchaton # todo: change this eventually
 
 dataset: ???
 experiment_name: ${now:%Y-%m-%d}_${now:%H-%M-%S}
