--- a/conf/logger/tchaton.yaml
+++ b/conf/logger/tchaton.yaml
@@ -8,4 +8,4 @@ anonymous: False
 project: ${dataset.dataset_name}
 experiment:
 entity: 'tchaton'
-group: ${model.pretrained_model_name_or_path}
+group: ${backbone.pretrained_model_name_or_path}
