--- a/conf/tokenizer/huggingface.yaml
+++ b/conf/tokenizer/huggingface.yaml
@@ -1,4 +1,4 @@
 # @package tokenizer
-_target_: lightning_transformers.core.tokenizers.HuggingFaceTokenizer
-pretrained_model_name_or_path: ${model.pretrained_model_name_or_path}
+_target_: lightning_transformers.tokenizers.HuggingFaceTokenizer
+pretrained_model_name_or_path: ${backbone.pretrained_model_name_or_path}
 use_fast: true
