--- a/conf/task/huggingface/multiple_choice.yaml
+++ b/conf/task/huggingface/multiple_choice.yaml
@@ -1,3 +1,5 @@
 # @package task
+defaults:
+  - backbone: huggingface/bert-base-cased
 _target_: lightning_transformers.task.multiple_choice.LitAutoModelMultipleChoiceTransformer
 downstream_model_type: transformers.AutoModelForMultipleChoice
