--- a/conf/task/huggingface/text_classification.yaml
+++ b/conf/task/huggingface/text_classification.yaml
@@ -1,3 +1,5 @@
 # @package task
+defaults:
+  - backbone: huggingface/bert-base-cased
 _target_: lightning_transformers.task.text_classification.LitAutoModelTextClassificationTransformer
 downstream_model_type: transformers.AutoModelForSequenceClassification
