Add default model

--- a/conf/task/huggingface/language_modeling.yaml
+++ b/conf/task/huggingface/language_modeling.yaml
@@ -1,3 +1,5 @@
 # @package task
+defaults:
+  - backbone: huggingface/bert-base-cased
 _target_: lightning_transformers.task.language_modeling.LitLanguageModelingTransformer
 downstream_model_type: transformers.AutoModelForCausalLM
