--- a/conf/backbone/huggingface/roberta-base.yaml
+++ b/conf/backbone/huggingface/roberta-base.yaml
@@ -1,4 +1,4 @@
 # @package backbone
 defaults:
-  - tokenizer: autotokenizer
+  - /tokenizer@_group_: autotokenizer
 pretrained_model_name_or_path: roberta-base
