--- a/conf/dataset/multiple_choice/swag.yaml
+++ b/conf/dataset/multiple_choice/swag.yaml
@@ -1,5 +1,5 @@
 # @package dataset
-_target_: lightning_transformers.task.multiple_choice.LitSwagMultipleChoiceTransformerDataModule
+_target_: lightning_transformers.task.huggingface.multiple_choice.LitSwagMultipleChoiceTransformerDataModule
 dataset_name: swag
 train_file: ''
 validation_file: ''
