--- a/conf/scheduler/linear_schedule_with_warmup.yaml
+++ b/conf/scheduler/linear_schedule_with_warmup.yaml
@@ -1,4 +1,4 @@
 # @package _group_
 _target_: transformers.get_linear_schedule_with_warmup
-num_warmup_steps: 10
-num_training_steps: 10
+num_warmup_steps: 0.1 # float values determines percentage of training steps to use as warmup
+num_training_steps: -1 # -1 specifies to infer number of training steps
