--- a/conf/dataset/multiple_choice/swag.yaml
+++ b/conf/dataset/multiple_choice/swag.yaml
@@ -11,3 +11,7 @@ max_length: 128
 preprocessing_num_workers: 8
 load_from_cache_file: True
 pad_to_max_length: True
+
+# torch data-loader specific arguments
+batch_size: ${training.batch_size}
+num_workers: ${training.num_workers}
