--- a/conf/dataset/question_answering/squad.yaml
+++ b/conf/dataset/question_answering/squad.yaml
@@ -16,3 +16,9 @@ null_score_diff_threshold: .0
 doc_stride: 128
 n_best_size: 20
 max_answer_length: 30
+output_dir: ${training.output_dir}
+do_train: ${training.do_train}
+
+# torch data-loader specific arguments
+batch_size: ${training.batch_size}
+num_workers: ${training.num_workers}
