--- a/conf/dataset/text_classification/emotion.yaml
+++ b/conf/dataset/text_classification/emotion.yaml
@@ -7,3 +7,7 @@ padding: 'max_length'
 truncation: 'only_first'
 preprocessing_num_workers: 8
 load_from_cache_file: True
+
+# torch data-loader specific arguments
+batch_size: ${training.batch_size}
+num_workers: ${training.num_workers}
