--- a/conf/task/huggingface/language_modeling.yaml
+++ b/conf/task/huggingface/language_modeling.yaml
@@ -1,5 +1,5 @@
 # @package task
 defaults:
-  - backbone: huggingface/bert-base-cased
-_target_: lightning_transformers.task.language_modeling.LitLanguageModelingTransformer
+  - /backbone@_group_: huggingface/bert-base-cased
+_target_: lightning_transformers.task.language_modeling.LanguageModelingTransformer
 downstream_model_type: transformers.AutoModelForCausalLM
