--- a/conf/dataset/text_classification/emotion.yaml
+++ b/conf/dataset/text_classification/emotion.yaml
@@ -1,13 +1,15 @@
 # @package dataset
-_target_: lightning_transformers.task.huggingface.text_classification.TextClassificationDataModule
-dataset_name: emotion
-train_file: ''
-validation_file: ''
-padding: 'max_length'
-truncation: 'only_first'
-preprocessing_num_workers: 8
-load_from_cache_file: True
+_target_: lightning_transformers.huggingface.task.text_classification.TextClassificationDataModule
+cfg:
+  dataset_name: emotion
+  train_file: ''
+  validation_file: ''
+  padding: 'max_length'
+  truncation: 'only_first'
+  preprocessing_num_workers: 8
+  load_from_cache_file: True
+  max_length: 128
 
-# torch data-loader specific arguments
-batch_size: ${training.batch_size}
-num_workers: ${training.num_workers}
+  # torch data-loader specific arguments
+  batch_size: ${training.batch_size}
+  num_workers: ${training.num_workers}
