--- a/conf/task/huggingface/text_classification.yaml
+++ b/conf/task/huggingface/text_classification.yaml
@@ -1,5 +1,3 @@
-# @package task
-defaults:
-  - /backbone@_group_: huggingface/bert-base-cased
-_target_: lightning_transformers.task.huggingface.text_classification.TextClassificationTransformer
+_target_: lightning_transformers.huggingface.task.text_classification.TextClassificationTransformer
 downstream_model_type: transformers.AutoModelForSequenceClassification
+pretrained_model_name_or_path: bert-base-cased
