Instantiate model via instantiator

--- a/conf/config.yaml
+++ b/conf/config.yaml
@@ -1,7 +1,7 @@
 defaults: # for loading the default config
   - training: default
   - trainer: default
-  - model: default
+  - backbone: default
   - optimizer: adamw
   - scheduler: linear_schedule_with_warmup
   - tokenizer: default
