--- a/conf/trainer/default.yaml
+++ b/conf/trainer/default.yaml
@@ -15,7 +15,7 @@ progress_bar_refresh_rate: 1
 overfit_batches: 0.0
 track_grad_norm: -1
 check_val_every_n_epoch: 1
-fast_dev_run: True
+fast_dev_run: False
 accumulate_grad_batches: 1
 max_epochs: 1000
 min_epochs: 1
