--- a/conf/task/huggingface/text_classification.yaml
+++ b/conf/task/huggingface/text_classification.yaml
@@ -1,5 +1,6 @@
 _target_: lightning_transformers.task.huggingface.text_classification.TextClassificationTransformer
-module: ${module}
 backbone:
   downstream_model_type: transformers.AutoModelForSequenceClassification
   pretrained_model_name_or_path: bert-base-cased
+optimizer: ${optimizer}
+scheduler: ${scheduler}
