Refactor huggingface/task/text_classification (#35)
* Refactor

* Minor changes

* Set num_labels

* It's alive!! :zombie:

* Instantiate model via instantiator

* Minor changes

* Refactor config structure. Now tasks define module and backbone

* Address comments

Co-authored-by: SeanNaren <sean@grid.ai>

* Merge validation and test step functions

* Restructure code as voted

* Address comments

* Drop properties

* Move config dataclasses into config.py

* Address comments

* Revert Sean's comment

Co-authored-by: SeanNaren <sean@grid.ai>

--- a/conf/config.yaml
+++ b/conf/config.yaml
@@ -1,12 +1,13 @@
 defaults: # for loading the default config
   - training: default
   - trainer: default
-  - scheduler: linear_schedule_with_warmup
   - optimizer: adamw
+  - scheduler: linear_schedule_with_warmup
+  - tokenizer: default
   - logger: tchaton # todo: change this eventually
 
 task: ???
 dataset: ???
 experiment_name: ${now:%Y-%m-%d}_${now:%H-%M-%S}
 log: False
-ignore_warnings: True
+ignore_warnings: True # todo: check warnings before release
