--- a/conf/dataset/language_modeling/wikitext.yaml
+++ b/conf/dataset/language_modeling/wikitext.yaml
@@ -1,8 +1,15 @@
 # @package dataset
 _target_: lightning_transformers.task.huggingface.language_modeling.LanguageModelingTransformerDataModule
-dataset_name: wikitext
-dataset_config_name: wikitext-2-raw-v1
-train_file: null
-validation_file: null
-block_size: null
-validation_split_percentage: 5
+cfg:
+  dataset_name: wikitext
+  dataset_config_name: wikitext-2-raw-v1
+  train_file: null
+  validation_file: null
+  block_size: null
+  do_train: True
+  preprocessing_num_workers: 1
+  load_from_cache_file: True
+
+  # torch data-loader specific arguments
+  batch_size: ${training.batch_size}
+  num_workers: ${training.num_workers}
