--- a/conf/task/huggingface/language_modeling.yaml
+++ b/conf/task/huggingface/language_modeling.yaml
@@ -1,5 +1,7 @@
 # @package task
-defaults:
-  - /backbone@_group_: huggingface/bert-base-cased
 _target_: lightning_transformers.task.huggingface.language_modeling.LanguageModelingTransformer
-downstream_model_type: transformers.AutoModelForCausalLM
+backbone:
+  downstream_model_type: transformers.AutoModelForCausalLM
+  pretrained_model_name_or_path: bert-base-cased
+optimizer: ${optimizer}
+scheduler: ${scheduler}
