--- a/tests/requirements.txt
+++ b/tests/requirements.txt
@@ -1,10 +1,11 @@
-coverage>=5.0
 codecov>=2.1
 pytest>=5.0
 pytest-cov
 pytest-flake8
-flake8
 check-manifest
 twine==1.13.0
 isort>=5.0
+black
+flake8
+flake8-black
 mypy>=0.720
