--- a/tests/requirements.txt
+++ b/tests/requirements.txt
@@ -1,11 +1,10 @@
 codecov>=2.1
 pytest>=5.0
-pytest-cov
-pytest-flake8
 check-manifest
 twine==1.13.0
-isort>=5.0
+isort
 black
 flake8
 flake8-black
-mypy>=0.720
+pre-commit
+#mypy
