--- a/conf/dataset/question_answering/squad.yaml
+++ b/conf/dataset/question_answering/squad.yaml
@@ -1,24 +1,24 @@
 # @package dataset
 _target_: lightning_transformers.task.huggingface.question_answering.datasets.SquadTransformerDataModule
-dataset_name: squad
-train_file: ''
-validation_file: ''
-dataset_config_name: 'plain_text'
-padding: 'max_length'
-truncation: 'only_first'
-max_seq_length: 384
-max_length: 128
-preprocessing_num_workers: 8
-load_from_cache_file: True
-pad_to_max_length: True
-version_2_with_negative: False
-null_score_diff_threshold: .0
-doc_stride: 128
-n_best_size: 20
-max_answer_length: 30
-output_dir: ${training.output_dir}
-do_train: ${training.do_train}
+cfg:
+  dataset_name: squad
+  train_file: null
+  validation_file: null
+  dataset_config_name: 'plain_text'
+  padding: 'max_length'
+  truncation: 'only_first'
+  max_seq_length: 384
+  max_length: 128
+  preprocessing_num_workers: 8
+  load_from_cache_file: True
+  pad_to_max_length: True
+  version_2_with_negative: False
+  null_score_diff_threshold: .0
+  doc_stride: 128
+  n_best_size: 20
+  max_answer_length: 30
+  output_dir: ${training.output_dir}
 
-# torch data-loader specific arguments
-batch_size: ${training.batch_size}
-num_workers: ${training.num_workers}
+  # torch data-loader specific arguments
+  batch_size: ${training.batch_size}
+  num_workers: ${training.num_workers}
