--- a/conf/task/huggingface/question_answering.yaml
+++ b/conf/task/huggingface/question_answering.yaml
@@ -1,5 +1,7 @@
 # @package task
-defaults:
-  - /backbone@_group_: huggingface/bert-base-cased
 _target_: lightning_transformers.task.huggingface.question_answering.QuestionAnsweringTransformer
-downstream_model_type: transformers.AutoModelForQuestionAnswering
+backbone:
+  downstream_model_type: transformers.AutoModelForQuestionAnswering
+  pretrained_model_name_or_path: bert-base-cased
+optimizer: ${optimizer}
+scheduler: ${scheduler}
