Play with API structure a bit to allow backbone/other configs to exist separately, enforce API from instantiator not large task conf

--- a/conf/dataset/text_classification/emotion.yaml
+++ b/conf/dataset/text_classification/emotion.yaml
@@ -2,6 +2,7 @@
 _target_: lightning_transformers.task.huggingface.text_classification.TextClassificationDataModule
 cfg:
   dataset_name: emotion
+  dataset_config_name: null
   train_file: ''
   validation_file: ''
   padding: 'max_length'
