--- a/conf/config.yaml
+++ b/conf/config.yaml
@@ -3,7 +3,8 @@ defaults: # for loading the default config
   - trainer: default
   - optimizer: adamw
   - scheduler: linear_schedule_with_warmup
-  - tokenizer: default
+  - tokenizer: huggingface/default
+  - backbone: huggingface/default
   - logger: tchaton # todo: change this eventually
 
 task: ???
