--- a/tests/requirements.txt
+++ b/tests/requirements.txt
@@ -1,10 +1,10 @@
-coverage>=5.0
 codecov>=2.1
 pytest>=5.0
-pytest-cov
-pytest-flake8
-flake8
 check-manifest
 twine==1.13.0
-isort>=5.0
-mypy>=0.720
+isort
+black
+flake8
+flake8-black
+pre-commit
+#mypy
