--- a/conf/task/huggingface/language_modeling.yaml
+++ b/conf/task/huggingface/language_modeling.yaml
@@ -1,7 +1,6 @@
 # @package task
 _target_: lightning_transformers.task.huggingface.language_modeling.LanguageModelingTransformer
-backbone:
-  downstream_model_type: transformers.AutoModelForCausalLM
-  pretrained_model_name_or_path: bert-base-cased
+downstream_model_type: transformers.AutoModelForCausalLM
+backbone: ${backbone}
 optimizer: ${optimizer}
 scheduler: ${scheduler}
