--- a/conf/logger/tchaton.yaml
+++ b/conf/logger/tchaton.yaml
@@ -1,3 +1,4 @@
+# @package _group_
 _target_: lightning_transformers.core.utils.initialize_wandb_logger
 experiment_name: ${experiment_name}
 save_dir: ''
