--- a/conf/dataset/summarization/cnn_dailymail.yaml
+++ b/conf/dataset/summarization/cnn_dailymail.yaml
@@ -1,8 +1,8 @@
 # @package dataset
-_target_: lightning_transformers.task.huggingface.summarization.XsumSummarizationDataModule
+_target_: lightning_transformers.task.huggingface.summarization.CNNDailyMailSummarizationDataModule
 cfg:
-  dataset_name: xsum
-  dataset_config_name: null
+  dataset_name: cnn_dailymail
+  dataset_config_name: 3.0.0
   train_file: ''
   validation_file: ''
   padding: 'max_length'
