Add comment, add accelerator + remove target as its a part of the defaults

--- a/conf/trainer/sharded.yaml
+++ b/conf/trainer/sharded.yaml
@@ -1,6 +1,6 @@
 defaults:
-  - default
-_target_: pytorch_lightning.Trainer
+  - default # add args from default trainer conf
 gpus: 2
+accelerator: ddp
 plugins: "ddp_sharded"
 amp_backend: 'native'
