--- a/conf/trainer/sharded.yaml
+++ b/conf/trainer/sharded.yaml
@@ -1,53 +1,6 @@
-_target_: pytorch_lightning.Trainer
-logger: True
-checkpoint_callback: True
-callbacks: null
-default_root_dir: null
-gradient_clip_val: 0.0
-process_position: 0
-num_nodes: 1
-num_processes: 1
+defaults:
+  - default # add args from default trainer conf
 gpus: 2
-auto_select_gpus: False
-tpu_cores: null
-log_gpu_memory: null
-progress_bar_refresh_rate: 1
-overfit_batches: 0.0
-track_grad_norm: -1
-check_val_every_n_epoch: 1
-fast_dev_run: False
-accumulate_grad_batches: 1
-max_epochs: 1000
-min_epochs: 1
-max_steps: null
-min_steps: null
-limit_train_batches: 1.0
-limit_val_batches: 1.0
-limit_test_batches: 1.0
-val_check_interval: 1.0
-flush_logs_every_n_steps: 100
-log_every_n_steps: 50
-accelerator: null
-sync_batchnorm: False
-precision: 32
-weights_summary: 'top'
-weights_save_path: null
-num_sanity_val_steps: 2
-truncated_bptt_steps: null
-resume_from_checkpoint: null
-profiler: null
-benchmark: False
-deterministic: True
-reload_dataloaders_every_epoch: False
-auto_lr_find: False
-replace_sampler_ddp: True
-terminate_on_nan: True
-auto_scale_batch_size: False
-prepare_data_per_node: True
+accelerator: ddp
 plugins: "ddp_sharded"
 amp_backend: 'native'
-amp_level: 'O2'
-distributed_backend: null
-automatic_optimization: null
-move_metrics_to_cpu: False
-enable_pl_optimizer: True
