--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,11 @@
 pytorch-lightning>=1.0.0
 torch>=1.6
+fairscale
+# huggingface
 transformers
 datasets
+# hydra
 hydra-core>=1.1.0.dev2 # todo: swap to 1.1 version once out
-fairscale
+dacite
+# task-specific
 rouge-score
