--- a/conf/dataset/text_classification/emotion.yaml
+++ b/conf/dataset/text_classification/emotion.yaml
@@ -1,6 +1,7 @@
 # @package dataset
 _target_: lightning_transformers.task.huggingface.text_classification.TextClassificationDataModule
 cfg:
+  _target_config_: lightning_transformers.core.huggingface.config.HFTransformerDataConfig
   dataset_name: emotion
   dataset_config_name: null
   train_file: ''
