--- a/conf/task/huggingface/question_answering.yaml
+++ b/conf/task/huggingface/question_answering.yaml
@@ -1,7 +1,6 @@
 # @package task
 _target_: lightning_transformers.task.huggingface.question_answering.QuestionAnsweringTransformer
-backbone:
-  downstream_model_type: transformers.AutoModelForQuestionAnswering
-  pretrained_model_name_or_path: bert-base-cased
+downstream_model_type: transformers.AutoModelForQuestionAnswering
+backbone: ${backbone}
 optimizer: ${optimizer}
 scheduler: ${scheduler}
