--- a/conf/dataset/vision/cifar_description.yaml
+++ b/conf/dataset/vision/cifar_description.yaml
@@ -1,5 +1,6 @@
 _target_: lightning_transformers.task.vision.dalle.datasets.CIFARDescriptionDataModule
 data_dir: ~/cifar/
+context_length: ${backbone.text_seq_len}
 # torch data-loader specific arguments
 batch_size: ${training.batch_size}
 num_workers: ${training.num_workers}
