--- a/conf/tokenizer/clip/default.yaml
+++ b/conf/tokenizer/clip/default.yaml
@@ -1,2 +1,1 @@
-_target_: lightning_transformers.task.vision.dalle.clip.simple_tokenizer.SimpleTokenizer
-bpe_path: /data/lightning-transformers/bpe_simple_vocab_16e6.txt.gz
+_target_: clip.simple_tokenizer.SimpleTokenizer
