Fix end to end running

--- a/conf/task/vision/igpt.yaml
+++ b/conf/task/vision/igpt.yaml
@@ -1,5 +1,8 @@
 # @package task
+defaults:
+  - override /backbone@_group_: vision/igpt/gpt2 # default to vision gpt2
 _target_: lightning_transformers.task.vision.igpt.GenerativePixelsTransformer
+num_pixels: 32
 backbone: ${backbone}
 optimizer: ${optimizer}
 scheduler: ${scheduler}
