--- a/conf/config.yaml
+++ b/conf/config.yaml
@@ -3,7 +3,7 @@ defaults: # for loading the default config
   - trainer: default
   - optimizer: adamw
   - scheduler: linear_schedule_with_warmup
-  - tokenizer: huggingface/default
+  #- tokenizer: huggingface/default
   - backbone: nlp/huggingface/default
   - logger: tchaton # todo: change this eventually
 
