--- a/.github/workflows/ci_install-pkg.yml
+++ b/.github/workflows/ci_install-pkg.yml
@@ -1,64 +1,52 @@
 name: Install pkg
 
-# see: https://help.github.com/en/actions/reference/events-that-trigger-workflows
-on:  # Trigger the workflow on push or pull request, but only for the master branch
+on:
   push:
     branches: [master]
   pull_request:
     branches: [master]
 
 jobs:
-  pkg-check:
-    runs-on: ubuntu-20.04
-
-    steps:
-      - uses: actions/checkout@master
-      - uses: actions/setup-python@v2
-        with:
-          python-version: 3.7
-
-      - name: Check package
-        run: |
-          pip install check-manifest
-          check-manifest
-          python setup.py check --metadata --strict
-
-      - name: Create package
-        run: |
-          pip install --upgrade setuptools wheel
-          python setup.py sdist
-
-      - name: Verify package
-        run: |
-          pip install twine==1.13.0
-          twine check dist/*
-          python setup.py clean
-
   pkg-install:
     runs-on: ${{ matrix.os }}
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-20.04, macOS-10.15]  #, windows-2019
-        python-version: [3.7]  #, 3.8
+        os: [ubuntu-20.04, macOS-10.15]  # windows-2019
+        python-version: [3.8]
 
     steps:
-      - uses: actions/checkout@master
+      - uses: actions/checkout@v2
       - uses: actions/setup-python@v2
         with:
           python-version: ${{ matrix.python-version }}
 
+      - name: Prepare env
+        run: |
+          pip install check-manifest "twine==3.2" setuptools wheel
+
       - name: Create package
         run: |
-          python setup.py sdist
+          check-manifest
+          python setup.py sdist bdist_wheel
 
-      - name: Install package
+      - name: Check package
         run: |
-          pip install virtualenv
-          virtualenv vEnv
-          source vEnv/bin/activate
-          pip install dist/*
-          cd .. & python -c "import pytorch_lightning as pl ; print(pl.__version__)"
-          cd .. & python -c "import lightning_transformers ; print(lightning_transformers.__version__)"
-          deactivate
-          rm -rf vEnv
+          twine check dist/*
+          python setup.py clean
+
+      - name: Install | Uninstall package - archive
+        run: |
+          # install as archive
+          pip install dist/*.tar.gz
+          cd ..
+          python -c "import lightning_transformers as lt; print(lt.__version__)"
+          pip uninstall -y lightning_transformers
+
+      - name: Install | Uninstall package - wheel
+        run: |
+          # install as wheel
+          pip install dist/*.whl
+          cd ..
+          python -c "import lightning_transformers as lt; print(lt.__version__)"
+          pip uninstall -y lightning_transformers
