--- a/setup.cfg
+++ b/setup.cfg
@@ -6,13 +6,14 @@ norecursedirs =
 addopts =
     --strict
     --doctest-modules
-    --durations=25
     --color=yes
+
 
 [coverage:report]
 exclude_lines =
     pragma: no-cover
     pass
+
 
 [flake8]
 max-line-length = 120
@@ -25,25 +26,35 @@ format = pylint
 ignore =
     E731  # do not assign a lambda expression, use a def
     W504  # line break occurred after a binary operator
-    E203  # whitespace before ':'. Opposite convention enforced by black
-    E231  # missing whitespace after ',', ';', or ':'; for black
-    W503  # line break before binary operator, need for black
 
-# setup.cfg or tox.ini
-[check-manifest]
-ignore =
-    *.yml
-    .github
-    .github/*
 
 [metadata]
 license_file = LICENSE
 description-file = README.md
 
+
+[yapf]
+based_on_style = pep8
+spaces_before_comment = 2
+split_before_logical_operator = true
+split_before_arithmetic_operator = true
+COLUMN_LIMIT = 120
+COALESCE_BRACKETS = true
+DEDENT_CLOSING_BRACKETS = true
+ALLOW_SPLIT_BEFORE_DICT_VALUE = false
+BLANK_LINE_BEFORE_NESTED_CLASS_OR_DEF = true
+NO_SPACES_AROUND_SELECTED_BINARY_OPERATORS = false
+
+
+[isort]
+profile = "google"
+line_length = 120
+force_sort_within_sections = false
+order_by_type = false
+
+
+# TODO: enable when better supported
 #[mypy]
-# Typing tests is low priority, but enabling type checking on the
-# untyped test functions (using `--check-untyped-defs`) is still
-# high-value because it helps test the typing.
 #files = lightning_transformers, train.py
 #disallow_untyped_defs = True
 #ignore_missing_imports = True
