--- a/.github/workflows/docs-check.yml
+++ b/.github/workflows/docs-check.yml
@@ -13,7 +13,7 @@ jobs:
       with:
         # git is required to clone the docs theme
         # before custom requirement are resolved https://github.com/ammaraskar/sphinx-action/issues/16
-        pre-build-command: "apt-get update -y && apt-get install -y git && pip install -r requirements/docs.txt --use-feature=2020-resolver"
+        pre-build-command: "apt-get update -y && apt-get install -y git && pip install -r requirements/docs.txt"
         docs-folder: "docs/"
         repo-token: "${{ secrets.GITHUB_TOKEN }}"
 
@@ -38,8 +38,8 @@ jobs:
 
       - name: Install dependencies
         run: |
-          pip install -r requirements.txt -U -f https://download.pytorch.org/whl/cpu/torch_stable.html -q --use-feature=2020-resolver
-          pip install -r docs/requirements.txt --use-feature=2020-resolver
+          pip install -r requirements.txt -U -f https://download.pytorch.org/whl/cpu/torch_stable.html -q
+          pip install -r docs/requirements.txt
           python --version ; pip --version ; pip list
         shell: bash
 
@@ -72,8 +72,8 @@ jobs:
 
       - name: Install dependencies
         run: |
-          pip install -r requirements.txt -U -f https://download.pytorch.org/whl/torch_stable.html -q --use-feature=2020-resolver
-          pip install -r docs/requirements.txt --use-feature=2020-resolver
+          pip install -r requirements.txt -U -f https://download.pytorch.org/whl/torch_stable.html -q
+          pip install -r docs/requirements.txt
           # install Texlive, see https://linuxconfig.org/how-to-install-latex-on-ubuntu-20-04-focal-fossa-linux
           sudo apt-get update
           sudo apt-get install -y texlive-latex-extra dvipng texlive-pictures
