--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,7 +1,9 @@
 include requirements.txt
+recursive-include requirements *.txt
 include *.md
 include *.py
 include *.yaml
+include *.yml
 recursive-include conf *.yaml
 recursive-include lightning_transformers *.py
 
