Docs requirements path

--- a/.github/workflows/docs-check.yml
+++ b/.github/workflows/docs-check.yml
@@ -39,7 +39,7 @@ jobs:
       - name: Install dependencies
         run: |
           pip install -r requirements.txt -U -f https://download.pytorch.org/whl/cpu/torch_stable.html -q
-          pip install -r docs/requirements.txt
+          pip install -r requirements/docs.txt
           python --version ; pip --version ; pip list
         shell: bash
 
@@ -73,13 +73,11 @@ jobs:
       - name: Install dependencies
         run: |
           pip install -r requirements.txt -U -f https://download.pytorch.org/whl/torch_stable.html -q
-          pip install -r docs/requirements.txt
+          pip install -r requirements/docs.txt
+          python --version ; pip --version ; pip list
           # install Texlive, see https://linuxconfig.org/how-to-install-latex-on-ubuntu-20-04-focal-fossa-linux
           sudo apt-get update
           sudo apt-get install -y texlive-latex-extra dvipng texlive-pictures
-          python --version
-          pip --version
-          pip list
         shell: bash
 
       - name: Make Documentation
