--- a/.github/workflows/docs-check.yml
+++ b/.github/workflows/docs-check.yml
@@ -49,7 +49,7 @@ jobs:
           apt-get update && sudo apt-get install -y cmake
           cd docs
           make doctest
-          make coverage
+          #make coverage
 
   make-docs:
     runs-on: ubuntu-20.04
