--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -31,7 +31,8 @@ repos:
   - repo: https://github.com/pre-commit/mirrors-yapf
     rev: v0.30.0
     hooks:
-    - id: yapf
+      - id: yapf
+      -args: [--parallel]
 
   - repo: https://gitlab.com/pycqa/flake8.git
     rev: 3.8.4
