--- a/conf/backbone/nlp/huggingface/default.yaml
+++ b/conf/backbone/nlp/huggingface/default.yaml
@@ -1,2 +1,4 @@
 # @package backbone
+defaults:
+  - /tokenizer@_group_: huggingface/default # use autotokenizer as default
 pretrained_model_name_or_path: bert-base-cased
