--- a/conf/dataset/nlp/language_modeling/wikitext.yaml
+++ b/conf/dataset/nlp/language_modeling/wikitext.yaml
@@ -1,4 +1,6 @@
 # @package dataset
+defaults:
+  - /dataset/nlp/default
 _target_: lightning_transformers.task.nlp.huggingface.language_modeling.LanguageModelingTransformerDataModule
 cfg:
   dataset_name: wikitext
@@ -9,7 +11,3 @@ cfg:
   block_size: null
   preprocessing_num_workers: 1
   load_from_cache_file: True
-
-  # torch data-loader specific arguments
-  batch_size: ${training.batch_size}
-  num_workers: ${training.num_workers}
