--- a/conf/dataset/nlp/multiple_choice/race.yaml
+++ b/conf/dataset/nlp/multiple_choice/race.yaml
@@ -1,4 +1,6 @@
 # @package dataset
+defaults:
+  - /dataset/nlp/default
 _target_: lightning_transformers.task.nlp.huggingface.multiple_choice.RaceMultipleChoiceTransformerDataModule
 cfg:
   dataset_name: race
@@ -12,7 +14,3 @@ cfg:
   preprocessing_num_workers: 1
   load_from_cache_file: True
   cache_dir: null
-
-  # torch data-loader specific arguments
-  batch_size: ${training.batch_size}
-  num_workers: ${training.num_workers}
