--- a/conf/dataset/nlp/question_answering/squad.yaml
+++ b/conf/dataset/nlp/question_answering/squad.yaml
@@ -1,4 +1,6 @@
 # @package dataset
+defaults:
+  - /dataset/nlp/default
 _target_: lightning_transformers.task.nlp.huggingface.question_answering.datasets.SquadTransformerDataModule
 cfg:
   dataset_name: squad
@@ -17,7 +19,3 @@ cfg:
   n_best_size: 20
   max_answer_length: 30
   output_dir: ${training.output_dir}
-
-  # torch data-loader specific arguments
-  batch_size: ${training.batch_size}
-  num_workers: ${training.num_workers}
