--- a/conf/dataset/nlp/token_classification/conll.yaml
+++ b/conf/dataset/nlp/token_classification/conll.yaml
@@ -1,4 +1,6 @@
 # @package dataset
+defaults:
+  - /dataset/nlp/default
 _target_: lightning_transformers.task.nlp.huggingface.token_classification.TokenClassificationDataModule
 cfg:
   task_name: ner
@@ -14,7 +16,3 @@ cfg:
   label_all_tokens: False
   pad_to_max_length: False
   max_length: 128
-
-  # torch data-loader specific arguments
-  batch_size: ${training.batch_size}
-  num_workers: ${training.num_workers}
