--- a/conf/task/nlp/huggingface/summarization.yaml
+++ b/conf/task/nlp/huggingface/summarization.yaml
@@ -1,9 +1,8 @@
 # @package task
+defaults:
+  - /task/nlp/huggingface/default
 _target_: lightning_transformers.task.nlp.huggingface.summarization.HFSummarizationTransformer
 downstream_model_type: transformers.AutoModelForSeq2SeqLM
-backbone: ${backbone}
-optimizer: ${optimizer}
-scheduler: ${scheduler}
 cfg:
   use_stemmer: True
   rouge_newline_sep: True
