Address code review, simplify defaults since we can use relatives

--- a/conf/dataset/nlp/language_modeling/wikitext.yaml
+++ b/conf/dataset/nlp/language_modeling/wikitext.yaml
@@ -1,6 +1,6 @@
 # @package dataset
 defaults:
-  - /dataset/nlp/default
+  - default
 _target_: lightning_transformers.task.nlp.huggingface.language_modeling.LanguageModelingTransformerDataModule
 cfg:
   dataset_name: wikitext
