--- a/conf/task/nlp/huggingface/text_classification.yaml
+++ b/conf/task/nlp/huggingface/text_classification.yaml
@@ -1,5 +1,5 @@
 # @package task
 defaults:
-  - /task/nlp/huggingface/default
+  - nlp/huggingface/default
 _target_: lightning_transformers.task.nlp.huggingface.text_classification.TextClassificationTransformer
 downstream_model_type: transformers.AutoModelForSequenceClassification
