--- a/conf/dataset/nlp/multiple_choice/swag.yaml
+++ b/conf/dataset/nlp/multiple_choice/swag.yaml
@@ -1,6 +1,6 @@
 # @package dataset
 defaults:
-  - /dataset/nlp/default
+  - default
 _target_: lightning_transformers.task.nlp.huggingface.multiple_choice.SwagMultipleChoiceTransformerDataModule
 cfg:
   dataset_name: swag
