--- a/conf/dataset/nlp/question_answering/squad.yaml
+++ b/conf/dataset/nlp/question_answering/squad.yaml
@@ -1,6 +1,6 @@
 # @package dataset
 defaults:
-  - /dataset/nlp/default
+  - default
 _target_: lightning_transformers.task.nlp.huggingface.question_answering.datasets.SquadTransformerDataModule
 cfg:
   dataset_name: squad
