--- a/conf/task/nlp/huggingface/multiple_choice.yaml
+++ b/conf/task/nlp/huggingface/multiple_choice.yaml
@@ -1,5 +1,5 @@
 # @package task
 defaults:
-  - /task/nlp/huggingface/default
+  - nlp/huggingface/default
 _target_: lightning_transformers.task.nlp.huggingface.multiple_choice.MultipleChoiceTransformer
 downstream_model_type: transformers.AutoModelForMultipleChoice
