Defaults + Tokenizer optional (#87)
* Add defaults across the configs, make tokenizers truly optional based on hydra structure

* Address code review, simplify defaults since we can use relatives

--- a/conf/task/nlp/huggingface/language_modeling.yaml
+++ b/conf/task/nlp/huggingface/language_modeling.yaml
@@ -1,6 +1,5 @@
 # @package task
+defaults:
+  - nlp/huggingface/default
 _target_: lightning_transformers.task.nlp.huggingface.language_modeling.LanguageModelingTransformer
 downstream_model_type: transformers.AutoModelForCausalLM
-backbone: ${backbone}
-optimizer: ${optimizer}
-scheduler: ${scheduler}
