--- a/conf/dataset/nlp/text_classification/emotion.yaml
+++ b/conf/dataset/nlp/text_classification/emotion.yaml
@@ -1,4 +1,6 @@
 # @package dataset
+defaults:
+  - default
 _target_: lightning_transformers.task.nlp.huggingface.text_classification.TextClassificationDataModule
 cfg:
   dataset_name: emotion
@@ -11,7 +13,3 @@ cfg:
   preprocessing_num_workers: 8
   load_from_cache_file: True
   max_length: 128
-
-  # torch data-loader specific arguments
-  batch_size: ${training.batch_size}
-  num_workers: ${training.num_workers}
