--- a/conf/task/nlp/huggingface/question_answering.yaml
+++ b/conf/task/nlp/huggingface/question_answering.yaml
@@ -1,6 +1,5 @@
 # @package task
+defaults:
+  - nlp/huggingface/default
 _target_: lightning_transformers.task.nlp.huggingface.question_answering.QuestionAnsweringTransformer
 downstream_model_type: transformers.AutoModelForQuestionAnswering
-backbone: ${backbone}
-optimizer: ${optimizer}
-scheduler: ${scheduler}
