--- a/.github/workflows/docs-check.yml
+++ b/.github/workflows/docs-check.yml
@@ -40,7 +40,8 @@ jobs:
         run: |
           pip install -r requirements.txt -U -f https://download.pytorch.org/whl/cpu/torch_stable.html -q
           pip install -r requirements/docs.txt
-          python --version ; pip --version ; pip list
+          pip --version
+          pip list
         shell: bash
 
       - name: Test Documentation
@@ -72,7 +73,7 @@ jobs:
 
       - name: Install dependencies
         run: |
-          pip install -r requirements.txt -U -f https://download.pytorch.org/whl/torch_stable.html -q
+          pip install -r requirements.txt -f https://download.pytorch.org/whl/torch_stable.html -q
           pip install -r requirements/docs.txt
           python --version ; pip --version ; pip list
           # install Texlive, see https://linuxconfig.org/how-to-install-latex-on-ubuntu-20-04-focal-fossa-linux
