Add num_samples to allow testing to process a smaller set, remove QA test/validation step till metric fixed

--- a/conf/dataset/nlp/hf_default.yaml
+++ b/conf/dataset/nlp/hf_default.yaml
@@ -6,7 +6,8 @@ cfg:
   dataset_config_name: null
   train_file: ''
   validation_file: ''
-  split: null
+  train_val_split: null
+  max_samples: null
   cache_dir: null
   padding: 'max_length'
   truncation: 'only_first'
