--- a/conf/task/nlp/huggingface/default.yaml
+++ b/conf/task/nlp/huggingface/default.yaml
@@ -1,6 +1,4 @@
 # @package task
 defaults:
+  - default
   - /backbone@_group_: nlp/huggingface/default # use AutoModel backbone by default
-backbone: ${backbone}
-optimizer: ${optimizer}
-scheduler: ${scheduler}
