disable recursive, add test, update hydra-core

--- a/conf/task/nlp/huggingface/default.yaml
+++ b/conf/task/nlp/huggingface/default.yaml
@@ -1,4 +1,5 @@
 # @package task
+_recursive_: false
 defaults:
   - /backbone@_group_: nlp/huggingface/default # use AutoModel backbone by default
 backbone: ${backbone}
