--- a/conf/task/vision/igpt.yaml
+++ b/conf/task/vision/igpt.yaml
@@ -1,6 +1,7 @@
 # @package task
+_recursive_: false
 defaults:
-  - override /backbone@_group_: vision/igpt/gpt2 # default to vision gpt2
+  - /backbone@_group_: vision/igpt/gpt2 # default to vision gpt2
 _target_: lightning_transformers.task.vision.igpt.GenerativePixelsTransformer
 num_pixels: 32
 backbone: ${backbone}
