Integrate training iGPT model (#93)
* very WIP migration of iGPT

* Fix reference

* Fix end to end running

* Remove tokenizer, few formatting fixes

* Remove space,

* Add guard for torchvision

* disable recursive, add test, update hydra-core

* Formatting

* Add torchvision to install

* Add skipif condition, add sklearn to requirements.txt

* Update lightning_transformers/task/vision/igpt/data.py

Co-authored-by: Carlos Mocholí <carlossmocholi@gmail.com>

* Address reviews

* Apply code review

Co-authored-by: Carlos Mocholí <carlossmocholi@gmail.com>

--- a/requirements.txt
+++ b/requirements.txt
@@ -8,8 +8,12 @@ fairscale
 transformers
 datasets
 
+# vision
+torchvision
+sklearn
+
 # hydra
-hydra-core>=1.1.0.dev2 # todo: swap to 1.1 version once out
+hydra-core>=1.1.0.dev4 # todo: swap to 1.1 version once out
 
 # task-specific
 rouge-score
