Move torch specific arguments for cifar, add some new task docs

--- a/conf/dataset/vision/igpt/cifar.yaml
+++ b/conf/dataset/vision/igpt/cifar.yaml
@@ -1,9 +1,7 @@
 # @package dataset
+defaults:
+  - default
 _target_: lightning_transformers.task.vision.igpt.data.ImageGPTDataModule
 cfg:
   dataset: cifar10
   data_dir: ./
-
-  # torch data-loader specific arguments
-  batch_size: ${training.batch_size}
-  num_workers: ${training.num_workers}
