Add new task doc, add some more of the vision docs

--- a/conf/task/nlp/huggingface/default.yaml
+++ b/conf/task/nlp/huggingface/default.yaml
@@ -1,7 +1,4 @@
 # @package task
-_recursive_: false
 defaults:
+  - default
   - /backbone@_group_: nlp/huggingface/default # use AutoModel backbone by default
-backbone: ${backbone}
-optimizer: ${optimizer}
-scheduler: ${scheduler}
