Fix structure and references

--- a/conf/dataset/nlp/text_classification/glue.yaml
+++ b/conf/dataset/nlp/text_classification/glue.yaml
@@ -1,7 +1,7 @@
 # @package dataset
 defaults:
   - nlp/hf_default
-_target_: lightning_transformers.task.nlp.huggingface.text_classification.TextClassificationDataModule
+_target_: lightning_transformers.task.nlp.text_classification.TextClassificationDataModule
 cfg:
   dataset_name: glue
   # ['cola', 'sst2', 'mrpc', 'qqp', 'stsb', 'mnli', 'mnli_mismatched', 'mnli_matched', 'qnli', 'rte', 'wnli', 'ax']
