Some fixes and a lot of docs

--- a/conf/dataset/nlp/hf_default.yaml
+++ b/conf/dataset/nlp/hf_default.yaml
@@ -6,6 +6,7 @@ cfg:
   dataset_config_name: null
   train_file: ''
   validation_file: ''
+  test_file: ''
   train_val_split: null
   max_samples: null
   cache_dir: null
